# segapi

./: .gitignore  LICENSE.txt  README.txt  meson.build
api/: api.c  api.h  config.c  config.h  dprintf.c  exports.def  main.c  meson.build  util.c  util.h
